# django-permissify

./: .gitignore  README.md  pyproject.toml
permissify/: admin.py  apps.py  backends.py  managers.py  models.py  shortcuts.py  utils.py
permissify/drf/: __init__.py  permissions.py
permissify/management/commands/: add_role.py  remove_role.py
permissify/migrations/: 0001_initial.py
tests/: serializers.py  settings.py  urls.py  views.py
tests/tests/: test_drf_permissions.py  test_obj_perm.py  test_obj_perm_through_group.py  test_obj_perm_through_role.py  test_perm.py  test_perm_through_group.py  test_perm_through_role.py
