[tool.poetry]
name = "django-permissify"
version = "0.1.0"
description = "Django Object Permissions"
authors = ["Daniel Pinto <dmp593@gmail.com>"]
license = "MIT"
repository = "https://github.com/dmp593/django-permissify"
readme = "README.md"
package-mode = true
packages = [{include = "permissify/**/*.py"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.3"

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.3"
coverage = "^7.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
