[tool.poetry]
name = "django-permissify"
version = "1.0.3"
description = "Django Object Permissions"
authors = ["Daniel Pinto <dmp593@gmail.com>"]
license = "MIT"
repository = "https://github.com/dmp593/django-permissify"
readme = "README.md"
package-mode = true
keywords = ["Django", "Permissions", "Object Permissions"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

packages = [
    { include = "permissify/**/*.py" }
]

# rollback: migrations must be included
# exclude = [ "permissify/migrations/[!__init__]*.py" ]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.3"

[tool.poetry.group.dev.dependencies]
coverage = "^7.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
